// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context Event Pull Requests 0 Job Attempts fetchContext should work 1`] = `
{
  "data": {},
  "event": {
    "actor": "HenryNguyen5",
    "eventName": "pull_request",
    "ref": "refs/pull/21/merge",
    "repo": {
      "owner": "mockOwner",
      "repo": "mockRepo",
    },
    "sha": "512d1a168cf626018888b44dc35cdd6e79b9df8a",
  },
  "jobRun": {
    "estimatedEndedAtUnixSeconds": 1655254904,
    "hasFailed": 0,
    "id": 6891428337,
    "jobName": "generate-fixtures-name-1",
    "name": "generate-fixtures-name-1",
    "startedAt": "2022-06-15T01:01:13Z",
    "startedAtUnixSeconds": 1655254873,
    "url": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/jobs/6891428337",
  },
  "workflowRun": {
    "createdAt": "2022-06-15T01:01:00Z",
    "createdAtUnixSeconds": 1655254860,
    "runAttempt": 1,
    "runId": 2499110858,
    "runNumber": 28,
    "runStartedAt": "2022-06-15T01:01:00Z",
    "runStartedAtUnixSeconds": 1655254860,
    "updatedAt": "2022-06-15T01:01:17Z",
    "updatedAtUnixSeconds": 1655254877,
    "url": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/runs/2499110858",
    "workflowName": "Push Metrics CI",
    "workflowUrl": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/workflows/28123629",
  },
}
`;

exports[`Context Event Pull Requests 0 Job Attempts fetchJobRunContext should error out when a job lookup fails 1`] = `
[Error: No job for job name: "generate-fixtures" found during self-lookup, invalid job name given?
      Available jobs names + ids: my dummy job|6891428272,generate-fixtures-name-1|6891428337,generate-fixtures-name-2|6891428403
      ]
`;

exports[`Context Event Pull Requests 0 Job Attempts fetchJobRunContext should work when a matching job name is found 1`] = `
{
  "estimatedEndedAtUnixSeconds": 1655254904,
  "hasFailed": 0,
  "id": 6891428337,
  "name": "generate-fixtures-name-1",
  "startedAt": "2022-06-15T01:01:13Z",
  "startedAtUnixSeconds": 1655254873,
  "url": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/jobs/6891428337",
}
`;

exports[`Context Event Pull Requests 0 Job Attempts fetchWorkflowRunContext should error when run_started_at is null 1`] = `[Error: Could not find "run_started_at" for workflow run attempt runId:2499110858|attemptNumber:1, github api down / inconsistent?]`;

exports[`Context Event Pull Requests 0 Job Attempts fetchWorkflowRunContext should work 1`] = `
{
  "createdAt": "2022-06-15T01:01:00Z",
  "createdAtUnixSeconds": 1655254860,
  "runStartedAt": "2022-06-15T01:01:00Z",
  "runStartedAtUnixSeconds": 1655254860,
  "updatedAt": "2022-06-15T01:01:17Z",
  "updatedAtUnixSeconds": 1655254877,
  "url": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/runs/2499110858",
  "workflowUrl": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/workflows/28123629",
}
`;

exports[`Context Event Pull Requests 0 Job Attempts getGithubContext should return a correctly hydrated context 1`] = `
{
  "actor": "HenryNguyen5",
  "eventName": "pull_request",
  "jobName": "generate-fixtures",
  "ref": "refs/pull/21/merge",
  "repo": {
    "owner": "mockOwner",
    "repo": "mockRepo",
  },
  "runAttempt": 1,
  "runId": 2499110858,
  "runNumber": 28,
  "sha": "512d1a168cf626018888b44dc35cdd6e79b9df8a",
  "workflowName": "Push Metrics CI",
}
`;

exports[`Context Event Pull Requests 1 Job Attempts fetchContext should work 1`] = `
{
  "data": {},
  "event": {
    "actor": "HenryNguyen5",
    "eventName": "pull_request",
    "ref": "refs/pull/21/merge",
    "repo": {
      "owner": "mockOwner",
      "repo": "mockRepo",
    },
    "sha": "512d1a168cf626018888b44dc35cdd6e79b9df8a",
  },
  "jobRun": {
    "estimatedEndedAtUnixSeconds": 1655500786,
    "hasFailed": 0,
    "id": 6942977656,
    "jobName": "generate-fixtures-name-1",
    "name": "generate-fixtures-name-1",
    "startedAt": "2022-06-17T21:19:17Z",
    "startedAtUnixSeconds": 1655500757,
    "url": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/jobs/6942977656",
  },
  "workflowRun": {
    "createdAt": "2022-06-17T21:19:08Z",
    "createdAtUnixSeconds": 1655500748,
    "runAttempt": 1,
    "runId": 2499110858,
    "runNumber": 28,
    "runStartedAt": "2022-06-17T21:19:07Z",
    "runStartedAtUnixSeconds": 1655500747,
    "updatedAt": "2022-06-17T21:19:19Z",
    "updatedAtUnixSeconds": 1655500759,
    "url": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/runs/2499110858",
    "workflowName": "Push Metrics CI",
    "workflowUrl": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/workflows/28123629",
  },
}
`;

exports[`Context Event Pull Requests 1 Job Attempts fetchJobRunContext should error out when a job lookup fails 1`] = `
[Error: No job for job name: "generate-fixtures" found during self-lookup, invalid job name given?
      Available jobs names + ids: my dummy job|6942977557,generate-fixtures-name-1|6942977656,generate-fixtures-name-2|6942977735
      ]
`;

exports[`Context Event Pull Requests 1 Job Attempts fetchJobRunContext should work when a matching job name is found 1`] = `
{
  "estimatedEndedAtUnixSeconds": 1655500786,
  "hasFailed": 0,
  "id": 6942977656,
  "name": "generate-fixtures-name-1",
  "startedAt": "2022-06-17T21:19:17Z",
  "startedAtUnixSeconds": 1655500757,
  "url": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/jobs/6942977656",
}
`;

exports[`Context Event Pull Requests 1 Job Attempts fetchWorkflowRunContext should error when run_started_at is null 1`] = `[Error: Could not find "run_started_at" for workflow run attempt runId:2499110858|attemptNumber:1, github api down / inconsistent?]`;

exports[`Context Event Pull Requests 1 Job Attempts fetchWorkflowRunContext should work 1`] = `
{
  "createdAt": "2022-06-17T21:19:08Z",
  "createdAtUnixSeconds": 1655500748,
  "runStartedAt": "2022-06-17T21:19:07Z",
  "runStartedAtUnixSeconds": 1655500747,
  "updatedAt": "2022-06-17T21:19:19Z",
  "updatedAtUnixSeconds": 1655500759,
  "url": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/runs/2499110858",
  "workflowUrl": "https://api.github.com/repos/smartcontractkit/push-gha-metrics-action/actions/workflows/28123629",
}
`;

exports[`Context Event Pull Requests 1 Job Attempts getGithubContext should return a correctly hydrated context 1`] = `
{
  "actor": "HenryNguyen5",
  "eventName": "pull_request",
  "jobName": "generate-fixtures",
  "ref": "refs/pull/21/merge",
  "repo": {
    "owner": "mockOwner",
    "repo": "mockRepo",
  },
  "runAttempt": 1,
  "runId": 2499110858,
  "runNumber": 28,
  "sha": "512d1a168cf626018888b44dc35cdd6e79b9df8a",
  "workflowName": "Push Metrics CI",
}
`;
